--- a/render.yaml
+++ b/render.yaml
@@ -3,17 +3,14 @@ services:
     name: mlms-frontend
     env: static
     buildCommand: npm install && npm run build
-    staticPublishPath: ./
+    staticPublishPath: ./dist
     routes:
       - type: rewrite
         source: /*
         destination: /index.html
     envVars:
-      - key: VITE_API_URL
-        fromService:
-          name: mlms-backend
-          type: web
-          property: url
+      - key: NODE_ENV
+        value: production
 
   - type: web
     name: mlms-backend
@@ -21,9 +18,13 @@ services:
     buildCommand: cd backend && npm install
     startCommand: cd backend && npm start
     envVars:
+      - key: NODE_ENV
+        value: production
       - key: MONGODB_URI
         sync: false
       - key: JWT_SECRET
         sync: false
       - key: PORT
-        value: 8080 
+        value: 8080
+      - key: CORS_ORIGIN
+        value: https://mlms-frontend.onrender.com 
