--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build:frontend": "npm run create-dist && npm run copy-static && npm run optimize",
     "create-dist": "if not exist dist mkdir dist",
     "copy-static": "copy *.html dist\\ && copy *.css dist\\ && xcopy /E /I js dist\\js && copy *.png dist\\",
-    "optimize": "npm install -g html-minifier terser clean-css-cli && for %f in (dist\\*.html) do html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true -o \"%f\" \"%f\"",
+    "optimize": "npm install html-minifier terser clean-css-cli && for %f in (dist\\*.html) do html-minifier --collapse-whitespace --remove-comments --remove-optional-tags --remove-redundant-attributes --remove-script-type-attributes --remove-tag-whitespace --use-short-doctype --minify-css true --minify-js true -o \"%f\" \"%f\"",
     "dev": "cd backend && npm run dev"
   },
   "keywords": [
@@ -23,5 +23,8 @@
     "compression": "^1.7.4",
     "express": "^4.18.2",
     "serve-static": "^1.15.0"
+  },
+  "engines": {
+    "node": ">=16.0.0"
   }
 } 
