--- a/backend/package.json
+++ b/backend/package.json
@@ -17,12 +17,14 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^9.0.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "compression": "^1.7.4",
+    "serve-static": "^1.15.0"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
   },
   "engines": {
-    "node": ">=16.0.0"
+    "node": "16.x"
   }
 }
