--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: mlms-frontend
     env: static
-    buildCommand: npm install
-    staticPublishPath: .
+    buildCommand: cd frontend && npm install
+    staticPublishPath: ./frontend
     routes:
       - type: rewrite
         source: /*
@@ -13,11 +13,8 @@ services:
         value: production
     buildFilter:
       paths:
-      - package.json
-      - package-lock.json
-      - "**/*.js"
-      - "**/*.html"
-      - "**/*.css"
+      - frontend/**/*
+      - frontend/package.json
 
   - type: web
     name: mlms-backend
