--- a/backend/package.json
+++ b/backend/package.json
@@ -1,32 +1,36 @@
 {
   "name": "mlms-backend",
   "version": "1.0.0",
-  "description": "Backend for MLMS system",
+  "description": "Backend for MLMS (Learning Management System)",
   "main": "server.js",
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "build": "echo 'No build step required for Node.js backend'"
+    "test": "node scripts/testEndpoints.js",
+    "monitor": "node scripts/monitorEndpoints.js",
+    "test:ci": "node scripts/testEndpoints.js --ci"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.7",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.5.0",
-    "jsonwebtoken": "^9.0.1",
-    "mongoose": "^7.5.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.1.1",
     "pdfkit": "^0.17.0",
-    "serve-static": "^1.15.0"
+    "serve-static": "^1.15.0",
+    "winston": "^3.11.0"
   },
   "devDependencies": {
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.3"
   },
   "engines": {
-    "node": "16.x"
+    "node": ">=16.0.0"
   }
 }
